--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ env_list = lint, unit
 src_path = {tox_root}/src
 tests_path = {tox_root}/tests
 lib_path = {tox_root}/lib/charms/postgresql_k8s
+test_ha_charm_libs = {tox_root}tests/integration/ha_tests/application-charm/lib
+test_rel_charm_libs = {tox_root}tests/integration/new_relations/application-charm/lib
 all_path = {[vars]src_path} {[vars]tests_path} {[vars]lib_path}
 
 [testenv]
@@ -37,8 +39,11 @@ commands =
 description = Check code against coding style standards
 commands =
     poetry install --only format,lint
-    poetry run codespell {tox_root}/*.yaml {tox_root}/*.ini {tox_root}/*.md \
-      {tox_root}/*.toml {tox_root}/*.txt {tox_root}/.github
+    poetry run codespell {tox_root} --skip {tox_root}/.git --skip {tox_root}/.tox \
+      --skip {tox_root}/build --skip {tox_root}/lib --skip {tox_root}/venv \
+      --skip {tox_root}/.mypy_cache --skip {tox_root}/LICENSE --skip {tox_root}/poetry.lock \
+      --skip {[vars]test_ha_charm_libs} --skip {[vars]test_rel_charm_libs}
+    poetry run codespell {[vars]lib_path
     # pflake8 wrapper supports config from pyproject.toml
     poetry run pflake8 {[vars]all_path}
     poetry run isort --check-only --diff {[vars]all_path}
