--- a/metadata.yaml
+++ b/metadata.yaml
@@ -18,8 +18,8 @@ containers:
 resources:
   postgresql-image:
     type: oci-image
-    description: OCI image for PostgreSQL (dataplatformoci/postgres-patroni)
-    upstream-source: dataplatformoci/postgres-patroni
+    description: OCI image for PostgreSQL
+    upstream-source: jardon/charmed-postgresql:charm-fixes
 
 peers:
   database-peers:
