--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,68 +13,68 @@ repository = "https://github.com/canonical/postgresql-k8s-operator"
 
 [tool.poetry.dependencies]
 python = "^3.8.10"
-ops = "^2.0"
-pgconnstr = "^1.0.1"
-tenacity = "^8.2.2"
-cryptography = "^39.0.2"
-jsonschema = "^4.17.3"
-jinja2 = "^3.1.2"
-lightkube = "^0.12.0"
-lightkube-models = "^1.26.0.4"
-requests = "^2.28.2"
-boto3 = "^1.26.87"
+ops = "2.2.0"
+pgconnstr = "1.0.1"
+tenacity = "8.2.2"
+cryptography = "39.0.2"
+jsonschema = "4.17.3"
+jinja2 = "3.1.2"
+lightkube = "0.12.0"
+lightkube-models = "1.26.0.4"
+requests = "2.28.2"
+boto3 = "1.26.102"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
 
 [tool.poetry.group.format]
 optional = true
 
 [tool.poetry.group.format.dependencies]
-black = "^22.12.0"
-isort = "^5.11.4"
+black = "22.12.0"
+isort = "5.12.0"
 
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
-flake8 = "^6.0.0"
-flake8-docstrings = "^1.7.0"
-flake8-copyright = "^0.2.4"
-flake8-builtins = "^2.1.0"
-pyproject-flake8 = "^6.0.0.post1"
+flake8 = "6.0.0"
+flake8-docstrings = "1.7.0"
+flake8-copyright = "0.2.4"
+flake8-builtins = "2.1.0"
+pyproject-flake8 = "6.0.0.post1"
 pep8-naming = "^0.13.3"
-codespell = "^2.2.4"
+codespell = "2.2.4"
 
 [tool.poetry.group.unit]
 optional = true
 
 [tool.poetry.group.unit.dependencies]
-coverage = {extras = ["toml"], version = "^7.0.5"}
-pytest = "^7.2.2"
-pytest-asyncio = "^0.20.3"
-psycopg2 = {version = "^2.9.5", extras = ["binary"]}
+coverage = {extras = ["toml"], version = "7.2.2"}
+pytest = "7.2.2"
+pytest-asyncio = "0.20.3"
+psycopg2 = {version = "2.9.5", extras = ["binary"]}
 
 [tool.poetry.group.integration]
 optional = true
 
 [tool.poetry.group.integration.dependencies]
 lightkube = "^0.12.0"
-pytest = "^7.1.1"
-pytest-operator = "^0.23.0"
-juju = "^2" # Latest juju 2
-psycopg2 = {version = "^2.9.5", extras = ["binary"]}
+pytest = "7.2.2"
+pytest-operator = "0.23.0"
+juju = "2.9.42.1" # Latest juju 2
+psycopg2 = {version = "2.9.5", extras = ["binary"]}
 
 [tool.poetry.group.ha_charm]
 optional = true
 
 [tool.poetry.group.ha_charm.dependencies]
-ops = "^2.0"
-tenacity = "^8.2.2"
+ops = "2.2.0"
+tenacity = "8.2.2"
 
 [tool.poetry.group.relation_charm]
 optional = true
 
 [tool.poetry.group.relation_charm.dependencies]
-ops = "^2.0"
+ops = "2.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
