--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,7 +20,7 @@ resources:
   postgresql-image:
     type: oci-image
     description: OCI image for PostgreSQL
-    upstream-source: jardon/charmed-postgresql:charm-fixes
+    upstream-source: ghcr.io/canonical/charmed-postgresql:14.7-22.04_edge
 
 peers:
   database-peers:
