--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,8 +19,8 @@ containers:
 resources:
   postgresql-image:
     type: oci-image
-    description: OCI image for PostgreSQL (dataplatformoci/postgres-patroni)
-    upstream-source: dataplatformoci/postgres-patroni
+    description: OCI image for PostgreSQL
+    upstream-source: ghcr.io/canonical/charmed-postgresql:14.7-22.04_edge
 
 peers:
   database-peers:
