--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,8 +82,7 @@ jobs:
           - plugins-integration
           - tls-integration
         agent-versions:
-          # 2.9.44 disabled until we get more runners.
-          # - "2.9.44"  # renovate: latest juju 2
+          - "2.9.44"  # renovate: latest juju 2
           - "3.1.5"  # renovate: latest juju 3
     name: ${{ matrix.tox-environments }} | ${{ matrix.agent-versions }}
     needs:
