--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ lightkube = "0.14.0"
 lightkube-models = "1.27.1.4"
 requests = "2.31.0"
 boto3 = "1.28.34"
+cosl = "0.0.6"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
-packaging = "23.1"
 
 [tool.poetry.group.format]
 optional = true
