--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ botocore==1.31.34 ; python_full_version >= "3.10.6" and python_full_version < "4
 certifi==2023.7.22 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 cffi==1.15.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 charset-normalizer==3.2.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+cosl==0.0.6 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 cryptography==41.0.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 exceptiongroup==1.1.3 ; python_full_version >= "3.10.6" and python_version < "3.11"
 h11==0.14.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
@@ -19,7 +20,6 @@ lightkube-models==1.27.1.4 ; python_full_version >= "3.10.6" and python_full_ver
 lightkube==0.14.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 markupsafe==2.1.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 ops==2.5.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
-packaging==23.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 pgconnstr==1.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 pycparser==2.21 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 python-dateutil==2.8.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
@@ -31,5 +31,6 @@ s3transfer==0.6.2 ; python_full_version >= "3.10.6" and python_full_version < "4
 six==1.16.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 sniffio==1.3.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 tenacity==8.2.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+typing-extensions==4.7.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 urllib3==1.26.16 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 websocket-client==1.6.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
