--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ optional = true
 coverage = {extras = ["toml"], version = "7.3.1"}
 pydantic = "1.10.12"
 pytest = "7.4.2"
+pytest-mock = "3.11.1"
 pytest-asyncio = "0.21.1"
 psycopg2 = {version = "2.9.7", extras = ["binary"]}
 
@@ -56,6 +57,7 @@ optional = true
 [tool.poetry.group.integration.dependencies]
 lightkube = "0.14.0"
 pytest = "7.4.2"
+pytest-mock = "3.11.1"
 pytest-operator = "0.29.0"
 juju = "2.9.44.1 || 3.2.0.1"  # renovate libjuju
 psycopg2 = {version = "2.9.7", extras = ["binary"]}
