--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,9 @@ jinja2 = "3.1.2"
 lightkube = "0.14.0"
 lightkube-models = "1.28.1.4"
 requests = "2.31.0"
-boto3 = "1.28.44"
+boto3 = "1.28.48"
 cosl = "0.0.7"
+poetry-core = "1.7.0"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
 
 [tool.poetry.group.format]
