--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 anyio==4.0.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 attrs==23.1.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
-boto3==1.28.44 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
-botocore==1.31.44 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+boto3==1.28.48 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+botocore==1.31.48 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 certifi==2023.7.22 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 cffi==1.15.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 charset-normalizer==3.2.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
@@ -21,12 +21,13 @@ lightkube==0.14.0 ; python_full_version >= "3.10.6" and python_full_version < "4
 markupsafe==2.1.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 ops==2.6.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 pgconnstr==1.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+poetry-core==1.7.0 ; python_full_version >= "3.10.6" and python_version < "4.0"
 pycparser==2.21 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 python-dateutil==2.8.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 pyyaml==6.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 referencing==0.30.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 requests==2.31.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
-rpds-py==0.10.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+rpds-py==0.10.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 s3transfer==0.6.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 six==1.16.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 sniffio==1.3.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
