prototypical profile support

--- a/config.yaml
+++ b/config.yaml
@@ -26,3 +26,11 @@ options:
     default: false
     type: boolean
     description: Enable unaccent extension
+  profile:
+   description: |
+      Profile representing the scope of deployment, and used to tune resource allocation.
+      Allowed values are: “production” and “testing”.
+      Production will tune postgresql for maximum performance while testing will tune for
+      minimal running performance.
+   type: string
+   default: production
