--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ requests = "2.31.0"
 boto3 = "1.28.57"
 cosl = "0.0.7"
 poetry-core = "1.7.0"
+pydantic = "1.10.13"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
 
 [tool.poetry.group.format]
