--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 anyio==4.0.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 attrs==23.1.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 boto3==1.28.57 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
-botocore==1.31.57 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+botocore==1.31.58 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 certifi==2023.7.22 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 cffi==1.16.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 charset-normalizer==3.3.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
@@ -23,6 +23,7 @@ ops==2.7.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 pgconnstr==1.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 poetry-core==1.7.0 ; python_full_version >= "3.10.6" and python_version < "4.0"
 pycparser==2.21 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pydantic==1.10.13 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 python-dateutil==2.8.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 pyyaml==6.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 referencing==0.30.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
@@ -33,5 +34,5 @@ six==1.16.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 sniffio==1.3.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 tenacity==8.2.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 typing-extensions==4.8.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
-urllib3==1.26.16 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+urllib3==1.26.17 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 websocket-client==1.6.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
