--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,89 @@
 anyio==4.0.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+appnope==0.1.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" and sys_platform == "darwin"
+asttokens==2.4.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 attrs==23.1.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+backcall==0.2.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+bcrypt==4.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 boto3==1.28.57 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 botocore==1.31.57 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+cachetools==5.3.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 certifi==2023.7.22 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
-cffi==1.16.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
-charset-normalizer==3.3.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+cffi==1.15.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+charset-normalizer==3.2.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+colorama==0.4.6 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" and sys_platform == "win32"
 cosl==0.0.7 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 cryptography==41.0.4 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+decorator==5.1.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 exceptiongroup==1.1.3 ; python_full_version >= "3.10.6" and python_version < "3.11"
+executing==1.2.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+google-auth==2.23.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 h11==0.14.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 httpcore==0.18.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 httpx==0.25.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 idna==3.4 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+iniconfig==2.0.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+ipdb==0.13.13 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+ipython==8.15.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+jedi==0.19.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 jinja2==3.1.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 jmespath==1.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 jsonschema-specifications==2023.7.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 jsonschema==4.19.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+juju==3.2.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+jujubundlelib==0.5.7 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+kubernetes==27.2.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 lightkube-models==1.28.1.4 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 lightkube==0.14.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+macaroonbakery==1.3.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 markupsafe==2.1.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+matplotlib-inline==0.1.6 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+mypy-extensions==1.0.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+oauthlib==3.2.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 ops==2.7.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+packaging==23.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+paramiko==2.12.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+parso==0.8.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pexpect==4.8.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" and sys_platform != "win32"
 pgconnstr==1.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pickleshare==0.7.5 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pluggy==1.3.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 poetry-core==1.7.0 ; python_full_version >= "3.10.6" and python_version < "4.0"
+prompt-toolkit==3.0.39 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+protobuf==3.20.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+psycopg2[binary]==2.9.8 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+ptyprocess==0.7.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" and sys_platform != "win32"
+pure-eval==0.2.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pyasn1-modules==0.3.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pyasn1==0.5.0 ; python_full_version >= "3.10.6" and python_version < "4"
 pycparser==2.21 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pydantic==1.10.13 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pygments==2.16.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pymacaroons==0.13.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pynacl==1.5.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pyrfc3339==1.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pytest-asyncio==0.21.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pytest-operator==0.29.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pytest==7.4.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 python-dateutil==2.8.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+pytz==2023.3.post1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 pyyaml==6.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 referencing==0.30.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+requests-oauthlib==1.3.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 requests==2.31.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 rpds-py==0.10.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+rsa==4.9 ; python_full_version >= "3.10.6" and python_version < "4"
 s3transfer==0.7.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 six==1.16.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 sniffio==1.3.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+stack-data==0.6.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 tenacity==8.2.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
-typing-extensions==4.8.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+theblues==0.5.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+tomli==2.0.1 ; python_full_version >= "3.10.6" and python_version < "3.11"
+toposort==1.10 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+traitlets==5.10.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+typing-extensions==4.7.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+typing-inspect==0.9.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 urllib3==1.26.16 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+wcwidth==0.2.6 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 websocket-client==1.6.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
+websockets==11.0.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
