--- a/tox.ini
+++ b/tox.ini
@@ -189,4 +189,4 @@ commands =
 description = Install, lock and export poetry dependencies
 commands =
     poetry lock
-    poetry export -f requirements.txt -o requirements.txt
+    poetry export -f requirements.txt -o requirements.txt --without-hashes
