--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ requests = "2.31.0"
 boto3 = "1.28.57"
 cosl = "0.0.7"
 poetry-core = "1.7.0"
-pydantic = "^1.10, <2"
+pydantic = "1.10.13"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
 
 [tool.poetry.group.format]
@@ -46,7 +46,7 @@ optional = true
 
 [tool.poetry.group.unit.dependencies]
 coverage = {extras = ["toml"], version = "7.3.1"}
-pydantic = "^1.10, <2"
+pydantic = "1.10.13"
 pytest = "7.4.2"
 pytest-mock = "3.11.1"
 pytest-asyncio = "0.21.1"
